--- a/Car_Tracking.ipynb
+++ b/Car_Tracking.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Car Tracking project by Emil Wåreus\n"
+    "### Car Tracking project by Emil Wåreus\n"
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -104,10 +104,8 @@
     "                hog_features.append(get_hog_features(feature_image[:,:,channel], \n",
     "                                        orient, pix_per_cell, cell_per_block, \n",
     "                                        vis=False, feature_vec=True))\n",
-    "                hog_features = np.ravel(hog_features)        \n",
+    "            hog_features = np.ravel(hog_features)        \n",
     "        else:\n",
-    "            feature_image = cv2.cvtColor(feature_image, cv2.COLOR_LUV2RGB)\n",
-    "            feature_image = cv2.cvtColor(feature_image, cv2.COLOR_RGB2GRAY)\n",
     "            hog_features = get_hog_features(feature_image[:,:], orient, \n",
     "                            pix_per_cell, cell_per_block, vis=False, feature_vec=True)\n",
     "         \n",
@@ -120,8 +118,11 @@
     "                        spatial_feat=True, hist_feat=True, hog_feat=True):\n",
     "    \n",
     "    features = []\n",
-    "    \n",
+    "    n_img = len(imgs)\n",
+    "    i = 0\n",
     "    for file_p in imgs:\n",
+    "        i += 1\n",
+    "        print (i, end=\"\\r\")\n",
     "        file_features = []\n",
     "        image = cv2.imread(file_p) \n",
     "        \n",
@@ -149,6 +150,7 @@
     "        \n",
     "        \n",
     "        features.append(np.concatenate(file_features))\n",
+    "        '''\n",
     "        feature_image=cv2.flip(feature_image,1) \n",
     "        file_features = img_features(feature_image, \n",
     "                                     spatial_feat, \n",
@@ -160,8 +162,9 @@
     "                                     cell_per_block, \n",
     "                                     hog_channel)\n",
     "        \n",
-    "        \n",
+    "       \n",
     "        features.append(np.concatenate(file_features))\n",
+    "         '''\n",
     "    return features "
    ]
   },
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -205,16 +208,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\r",
+      "2\r",
+      "3\r",
+      "4\r",
+      "5\r",
+      "6\r",
+      "7\r",
+      "8\r",
+      "9\r",
+      "10\r",
+      "11\r",
+      "12\r",
+      "13\r",
+      "14\r",
+      "15\r",
+      "16\r",
+      "17\r",
+      "18\r",
+      "19\r",
+      "20\r",
+      "21\r",
+      "22"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/carnd/anaconda3/envs/carnd-term1/lib/python3.5/site-packages/skimage/feature/_hog.py:119: skimage_deprecation: Default value of `block_norm`==`L1` is deprecated and will be changed to `L2-Hys` in v0.15\n",
+      "C:\\ProgramData\\Anaconda3\\envs\\carnd-term1\\lib\\site-packages\\skimage\\feature\\_hog.py:119: skimage_deprecation: Default value of `block_norm`==`L1` is deprecated and will be changed to `L2-Hys` in v0.15\n",
       "  'be changed to `L2-Hys` in v0.15', skimage_deprecation)\n"
      ]
     },
@@ -222,21 +253,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of cars :  17584\n",
-      "Number of none-cars :  17936\n"
+      "Number of cars :  8792\n",
+      "Number of none-cars :  8968\n"
      ]
     }
    ],
    "source": [
-    "color_space = 'LUV' \n",
-    "orient = 8 \n",
+    "color_space = 'YUV' \n",
+    "orient = 11\n",
     "pix_per_cell = 8 \n",
     "cell_per_block = 2 \n",
-    "hog_channel = 0 \n",
+    "hog_channel = 'ALL'\n",
     "spatial_size = (16, 16) \n",
     "hist_bins = 32    \n",
-    "spatial_feat = True \n",
-    "hist_feat = True \n",
+    "spatial_feat = False\n",
+    "hist_feat = False\n",
     "hog_feat = True \n",
     "\n",
     "car_features = extract_features(cars, \n",
@@ -269,28 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35520\n",
-      "35520\n",
-      "35520\n",
-      " Done\n"
+      "17760\n",
+      "17760\n",
+      "17760\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nfor i in range(1,17):\\n    X = np.vstack((car_features[set_size*(i-1):set_size*i], not_cars_features[set_size*(i-1):set_size*i])).astype(np.float64)\\n    #print(len(X))\\n    Y = np.hstack((np.ones(len(car_features[set_size*(i-1):set_size*i])), np.zeros(len(not_cars_features[set_size*(i-1):set_size*i]))))\\n    #print(len(Y))\\n    X_scaler = StandardScaler().fit(X) # Fit a per-column scaler\\n    scaled_X = X_scaler.transform(X) # Apply the scaler to X\\n    X_train, X_test, Y_train, Y_test = train_test_split(scaled_X, Y, test_size=0.0, random_state=22)\\n    #print(len(scaled_X))\\n    #train batch\\n    SVC.fit(scaled_X, Y_train)\\n    print(i, \" Done\")\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -334,20 +354,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of SVC :  0.98874\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#Train support vector Machine\n",
     "print(\"Accuracy of SVC : \", round(SVC.score(X_test, Y_test), 5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define a single function that can extract features using hog sub-sampling and make predictions\n",
+    "def find_cars(img, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, spatial_size, hist_bins):\n",
+    "    \n",
+    "    draw_img = np.copy(img)\n",
+    "    img = img.astype(np.float32)/255\n",
+    "    \n",
+    "    img_tosearch = img[ystart:ystop,:,:]\n",
+    "    ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YCrCb')\n",
+    "    if scale != 1:\n",
+    "        imshape = ctrans_tosearch.shape\n",
+    "        ctrans_tosearch = cv2.resize(ctrans_tosearch, (np.int(imshape[1]/scale), np.int(imshape[0]/scale)))\n",
+    "        \n",
+    "    ch1 = ctrans_tosearch[:,:,0]\n",
+    "    ch2 = ctrans_tosearch[:,:,1]\n",
+    "    ch3 = ctrans_tosearch[:,:,2]\n",
+    "\n",
+    "    # Define blocks and steps as above\n",
+    "    nxblocks = (ch1.shape[1] // pix_per_cell) - cell_per_block + 1\n",
+    "    nyblocks = (ch1.shape[0] // pix_per_cell) - cell_per_block + 1 \n",
+    "    nfeat_per_block = orient*cell_per_block**2\n",
+    "    \n",
+    "    # 64 was the orginal sampling rate, with 8 cells and 8 pix per cell\n",
+    "    window = 64\n",
+    "    nblocks_per_window = (window // pix_per_cell) - cell_per_block + 1\n",
+    "    cells_per_step = 2  # Instead of overlap, define how many cells to step\n",
+    "    nxsteps = (nxblocks - nblocks_per_window) // cells_per_step\n",
+    "    nysteps = (nyblocks - nblocks_per_window) // cells_per_step\n",
+    "    \n",
+    "    # Compute individual channel HOG features for the entire image\n",
+    "    hog1 = get_hog_features(ch1, orient, pix_per_cell, cell_per_block, feature_vec=False)\n",
+    "    hog2 = get_hog_features(ch2, orient, pix_per_cell, cell_per_block, feature_vec=False)\n",
+    "    hog3 = get_hog_features(ch3, orient, pix_per_cell, cell_per_block, feature_vec=False)\n",
+    "    \n",
+    "    for xb in range(nxsteps):\n",
+    "        for yb in range(nysteps):\n",
+    "            ypos = yb*cells_per_step\n",
+    "            xpos = xb*cells_per_step\n",
+    "            # Extract HOG for this patch\n",
+    "            hog_feat1 = hog1[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
+    "            hog_feat2 = hog2[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
+    "            hog_feat3 = hog3[ypos:ypos+nblocks_per_window, xpos:xpos+nblocks_per_window].ravel() \n",
+    "            hog_features = np.hstack((hog_feat1, hog_feat2, hog_feat3))\n",
+    "\n",
+    "            xleft = xpos*pix_per_cell\n",
+    "            ytop = ypos*pix_per_cell\n",
+    "\n",
+    "            # Extract the image patch\n",
+    "            subimg = cv2.resize(ctrans_tosearch[ytop:ytop+window, xleft:xleft+window], (64,64))\n",
+    "          \n",
+    "            # Get color features\n",
+    "            spatial_features = bin_spatial(subimg, size=spatial_size)\n",
+    "            hist_features = color_hist(subimg, nbins=hist_bins)\n",
+    "\n",
+    "            # Scale features and make a prediction\n",
+    "            test_features = X_scaler.transform(np.hstack((spatial_features, hist_features, hog_features)).reshape(1, -1))    \n",
+    "            #test_features = X_scaler.transform(np.hstack((shape_feat, hist_feat)).reshape(1, -1))    \n",
+    "            test_prediction = svc.predict(test_features)\n",
+    "            \n",
+    "            if test_prediction == 1:\n",
+    "                xbox_left = np.int(xleft*scale)\n",
+    "                ytop_draw = np.int(ytop*scale)\n",
+    "                win_draw = np.int(window*scale)\n",
+    "                cv2.rectangle(draw_img,(xbox_left, ytop_draw+ystart),(xbox_left+win_draw,ytop_draw+win_draw+ystart),(0,0,255),6) \n",
+    "                \n",
+    "    return draw_img"
    ]
   },
   {
@@ -852,7 +941,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.ndimage.measurements import label\n",
