lets try again..

--- a/Car_Tracking.ipynb
+++ b/Car_Tracking.ipynb
@@ -88,9 +88,14 @@
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2YUV)\n",
     "            elif cspace == 'YCrCb':\n",
     "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2YCrCb)\n",
+    "            elif cspace == 'GRAY':\n",
+    "                feature_image = cv2.cvtColor(image, cv2.COLOR_RGB2GRAY)\n",
     "        else: feature_image = np.copy(image)      \n",
-    "\n",
-    "        if hog_channel == 'ALL':\n",
+    "        \n",
+    "        if color_space == 'GRAY':\n",
+    "            hog_features = get_hog_features(feature_image, orient, \n",
+    "                        pix_per_cell, cell_per_block, vis=False, feature_vec=True)\n",
+    "        elif hog_channel == 'ALL':\n",
     "            hog_features = []\n",
     "            for channel in range(feature_image.shape[2]):\n",
     "                hog_features.append(get_hog_features(feature_image[:,:,channel], \n",
@@ -187,10 +192,10 @@
    ],
    "source": [
     "#Lets look at the features \n",
-    "cspace = 'YUV' \n",
-    "orient = 11\n",
+    "cspace = 'GRAY' \n",
+    "orient = 8\n",
     "pix_per_cell = 16 \n",
-    "cell_per_block = 2 \n",
+    "cell_per_block = 1 \n",
     "hog_channel = 'ALL'\n",
     "\n",
     "car_img = mpimg.imread(cars[5])\n",
@@ -522,7 +527,7 @@
     "             cell_per_block):\n",
     "    \n",
     "    rectangles = []\n",
-    "    ystart = 400\n",
+    "    ystart = 336\n",
     "    ystop = 464\n",
     "    scale = 1.0\n",
     "    rectangles.append(find_cars(img, ystart, ystop, scale, \n",
@@ -530,7 +535,7 @@
     "                           X_scaler, orient, pix_per_cell, \n",
     "                           cell_per_block))\n",
     "\n",
-    "    ystart = 416\n",
+    "    ystart = 352\n",
     "    ystop = 480\n",
     "    scale = 1.0\n",
     "    rectangles.append(find_cars(img, ystart, ystop, scale, \n",
@@ -656,8 +661,9 @@
     "    # Return thresholded map\n",
     "    return heatmap\n",
     "\n",
-    "def draw_labeled_bboxes(img, labels):\n",
+    "def get_labeled_bboxes(img, labels):\n",
     "    \n",
+    "    bboxes = []\n",
     "    # Iterate through all detected cars\n",
     "    for car_number in range(1, labels[1]+1):\n",
     "        # Find pixels with each car_number label value\n",
@@ -675,15 +681,15 @@
     "          ((np.absolute(np.max(nonzerox)-np.min(nonzerox))\n",
     "           /np.absolute(np.min(nonzeroy)-np.max(nonzeroy))) > 0.7 )):\n",
     "            # Draw the box on the image\n",
-    "            cv2.rectangle(img, bbox[0], bbox[1], (0,0,255), 6)\n",
-    "            \n",
+    "            #cv2.rectangle(img, bbox[0], bbox[1], (0,0,255), 6)\n",
+    "            bboxes.append(bbox)\n",
     "        \n",
     "       \n",
     "    # Return the image\n",
-    "    return img\n",
+    "    return bboxes\n",
     "\n",
     "    \n",
-    "def draw_heated_boxes(img, box_list, threshold = 2):\n",
+    "def get_heated_boxes(img, box_list, threshold = 2):\n",
     "    heat = np.zeros_like(img[:,:,0]).astype(np.float)\n",
     "    # Add heat to each box in box list\n",
     "    heat = add_heat(heat,box_list)\n",
@@ -698,7 +704,57 @@
     "    labels = label(heatmap)\n",
     "    \n",
     "    \n",
-    "    return draw_labeled_bboxes(np.copy(img), labels)"
+    "    return get_labeled_bboxes(np.copy(img), labels)\n",
+    "\n",
+    "\n",
+    "def draw_boxes(img, bboxes, color=(0, 0, 255), thick=6):\n",
+    "    imcopy = np.copy(img)\n",
+    "    # Iterate through the bounding boxes\n",
+    "    for bbox in bboxes:\n",
+    "        # Draw a rectangle given bbox coordinates\n",
+    "        cv2.rectangle(imcopy, bbox[0], bbox[1], color, thick)\n",
+    "    # Return the image copy with boxes drawn\n",
+    "    return imcopy\n",
+    "\n",
+    "\n",
+    "def calc_average_boxes (hot_boxes, strength):\n",
+    "    avg_boxes = []\n",
+    "    while len(hot_boxes) > 0:\n",
+    "        b = hot_boxes.pop (0)\n",
+    "        hb = AverageHotBox (b)\n",
+    "        while hb.join (hot_boxes):\n",
+    "            pass\n",
+    "        avg_boxes.append (hb)\n",
+    "    \n",
+    "    boxes = []\n",
+    "    for ab in avg_boxes:\n",
+    "        if ab.get_strength () >= strength:\n",
+    "            boxes.append (ab.get_box ())\n",
+    "    return boxes\n",
+    "\n",
+    "\n",
+    "class HotQueue():\n",
+    "    \n",
+    "    def __init__ (self):\n",
+    "        self.queue_len = 10 \n",
+    "        self.last_boxes = []\n",
+    "\n",
+    "    def put_hot_boxes (self, boxes):\n",
+    "        \n",
+    "        if (len(self.last_boxes) > self.queue_max_len):\n",
+    "            tmp = self.last_boxes.pop (0)\n",
+    "        \n",
+    "        self.last_boxes.append (boxes)\n",
+    "        \n",
+    "    def get_hot_boxes (self):\n",
+    "        \"\"\"Get last 10 frames hot boxes\n",
+    "        \"\"\"\n",
+    "        b = []\n",
+    "        for boxes in self.last_boxes:\n",
+    "            b.extend (boxes)\n",
+    "        return b\n",
+    "\n",
+    "last_hot_boxes = LastHotBoxesQueue ()"
    ]
   },
   {
@@ -778,7 +834,9 @@
     "                           X_scaler, orient, pix_per_cell, \n",
     "                           cell_per_block)\n",
     "  \n",
-    "    img_w_boxes = draw_heated_boxes(img_out, rectangles, threshold=0)\n",
+    "    boxes = get_heated_boxes(img_out, rectangles, threshold=0)\n",
+    "    \n",
+    "    \n",
     "    plt.figure()\n",
     "    plt.imshow(cv2.cvtColor(img_w_boxes, cv2.COLOR_BGR2RGB))\n",
     "    \n",
@@ -813,8 +871,12 @@
     "                           X_scaler, orient, pix_per_cell, \n",
     "                           cell_per_block)\n",
     "\n",
+    "    boxes = get_heated_boxes(img_out, rectangles, threshold=0)\n",
+    "    last_hot_boxes.put_hot_boxes (hot_boxes)\n",
+    "    hot_boxes = last_hot_boxes.get_hot_boxes ()\n",
+    "    avg_boxes = calc_average_boxes (hot_boxes, 20)\n",
     "    \n",
-    "    img_w_boxes = draw_heated_boxes(img_out, rectangles, threshold=1)\n",
+    "    img_w_boxes = draw_boxes(img_out, avg_boxes)\n",
     "   \n",
     "    return img_w_boxes"
    ]
@@ -989,13 +1051,7 @@
       " 12%|█▏        | 149/1261 [00:53<06:40,  2.78it/s]\u001b[A\n",
       " 12%|█▏        | 150/1261 [00:53<06:57,  2.66it/s]\u001b[A\n",
       " 12%|█▏        | 151/1261 [00:54<06:50,  2.70it/s]\u001b[A\n",
-      " 12%|█▏        | 152/1261 [00:54<06:45,  2.74it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 12%|█▏        | 152/1261 [00:54<06:45,  2.74it/s]\u001b[A\n",
       " 12%|█▏        | 153/1261 [00:54<06:41,  2.76it/s]\u001b[A\n",
       " 12%|█▏        | 154/1261 [00:55<06:39,  2.77it/s]\u001b[A\n",
       " 12%|█▏        | 155/1261 [00:55<06:38,  2.77it/s]\u001b[A\n",
@@ -1303,13 +1359,7 @@
       " 36%|███▌      | 451/1261 [02:43<04:51,  2.78it/s]\u001b[A\n",
       " 36%|███▌      | 452/1261 [02:43<04:50,  2.79it/s]\u001b[A\n",
       " 36%|███▌      | 453/1261 [02:43<04:49,  2.79it/s]\u001b[A\n",
-      " 36%|███▌      | 454/1261 [02:44<04:48,  2.79it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 36%|███▌      | 454/1261 [02:44<04:48,  2.79it/s]\u001b[A\n",
       " 36%|███▌      | 455/1261 [02:44<04:48,  2.79it/s]\u001b[A\n",
       " 36%|███▌      | 456/1261 [02:44<04:48,  2.79it/s]\u001b[A\n",
       " 36%|███▌      | 457/1261 [02:45<04:48,  2.79it/s]\u001b[A\n",
@@ -1617,13 +1667,7 @@
       " 60%|█████▉    | 753/1261 [04:31<03:06,  2.72it/s]\u001b[A\n",
       " 60%|█████▉    | 754/1261 [04:31<03:06,  2.72it/s]\u001b[A\n",
       " 60%|█████▉    | 755/1261 [04:32<03:05,  2.73it/s]\u001b[A\n",
-      " 60%|█████▉    | 756/1261 [04:32<03:05,  2.72it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 60%|█████▉    | 756/1261 [04:32<03:05,  2.72it/s]\u001b[A\n",
       " 60%|██████    | 757/1261 [04:33<03:05,  2.72it/s]\u001b[A\n",
       " 60%|██████    | 758/1261 [04:33<03:04,  2.73it/s]\u001b[A\n",
       " 60%|██████    | 759/1261 [04:33<03:01,  2.76it/s]\u001b[A\n",
@@ -1930,13 +1974,7 @@
       " 84%|████████▎ | 1054/1261 [06:21<01:13,  2.81it/s]\u001b[A\n",
       " 84%|████████▎ | 1055/1261 [06:22<01:13,  2.81it/s]\u001b[A\n",
       " 84%|████████▎ | 1056/1261 [06:22<01:13,  2.80it/s]\u001b[A\n",
-      " 84%|████████▍ | 1057/1261 [06:22<01:13,  2.79it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 84%|████████▍ | 1057/1261 [06:22<01:13,  2.79it/s]\u001b[A\n",
       " 84%|████████▍ | 1058/1261 [06:23<01:13,  2.78it/s]\u001b[A\n",
       " 84%|████████▍ | 1059/1261 [06:23<01:12,  2.77it/s]\u001b[A\n",
       " 84%|████████▍ | 1060/1261 [06:24<01:12,  2.76it/s]\u001b[A\n",
