--- a/Car_Tracking.ipynb
+++ b/Car_Tracking.ipynb
@@ -1096,7 +1096,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1110,7 +1112,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 43/1261 [01:21<38:46,  1.91s/it]"
+      "100%|█████████▉| 1260/1261 [40:44<00:01,  1.98s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: project_video_proc_5.mp4 \n",
+      "\n",
+      "CPU times: user 38min 59s, sys: 2min 9s, total: 41min 8s\n",
+      "Wall time: 40min 45s\n"
      ]
     }
    ],
@@ -1125,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [16:34<00:00,  1.26it/s]\n"
+      "100%|█████████▉| 1260/1261 [40:31<00:01,  1.94s/it]\n"
      ]
     },
     {
@@ -1150,8 +1163,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: project_video_proc_6.mp4 \n",
       "\n",
-      "CPU times: user 15min 16s, sys: 1min 31s, total: 16min 47s\n",
-      "Wall time: 16min 35s\n"
+      "CPU times: user 38min 57s, sys: 1min 58s, total: 40min 55s\n",
+      "Wall time: 40min 32s\n"
      ]
     }
    ],
@@ -1182,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [16:10<00:00,  1.30it/s]\n"
+      "100%|█████████▉| 1260/1261 [39:57<00:01,  1.93s/it]\n"
      ]
     },
     {
@@ -1207,8 +1220,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: project_video_proc_7_rect.mp4 \n",
       "\n",
-      "CPU times: user 15min 3s, sys: 1min 19s, total: 16min 23s\n",
-      "Wall time: 16min 11s\n"
+      "CPU times: user 38min 24s, sys: 1min 57s, total: 40min 21s\n",
+      "Wall time: 39min 58s\n"
      ]
     }
    ],
@@ -1239,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [15:57<00:00,  1.40it/s]\n"
+      "100%|█████████▉| 1260/1261 [39:28<00:01,  1.85s/it]\n"
      ]
     },
     {
@@ -1264,8 +1277,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: project_video_proc_8_rect.mp4 \n",
       "\n",
-      "CPU times: user 15min 2s, sys: 1min 7s, total: 16min 10s\n",
-      "Wall time: 15min 58s\n"
+      "CPU times: user 38min 23s, sys: 1min 31s, total: 39min 54s\n",
+      "Wall time: 39min 29s\n"
      ]
     }
    ],
@@ -1296,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [16:17<00:00,  1.28it/s]\n"
+      "100%|█████████▉| 1260/1261 [39:58<00:01,  1.91s/it]\n"
      ]
     },
     {
@@ -1321,8 +1334,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: project_video_proc_9.mp4 \n",
       "\n",
-      "CPU times: user 15min 14s, sys: 1min 15s, total: 16min 29s\n",
-      "Wall time: 16min 17s\n"
+      "CPU times: user 38min 35s, sys: 1min 50s, total: 40min 25s\n",
+      "Wall time: 39min 59s\n"
      ]
     }
    ],
